--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                  <img src="https://static.toiimg.com/photo/65888288.cms" alt="">
                 <h1>Jodhpur</h1>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto, modi.</p>
-                <a href="#" class="btn">Read more</a>
+                <a href="#" class="btn">Read more!</a>
             </div>
         </div>
     </div>
